# gameboy-emulator

./: CMakeLists.txt  Makefile  main.c  main.cpp
gbcore/: CMakeLists.txt
include/: bus.h  cart.h  common.h  cpu.h  emu.h  ppu.h  timer.h
lib/: CMakeLists.txt  cart.cpp  emu.cpp
tests/: check_gbemu.cpp
